--- a/client/public/index.html
+++ b/client/public/index.html
@@ -43,7 +43,7 @@
         font-family: "Urbanist", sans-serif;
       }
     </style>
-    <title>React App</title>
+    <title>MEETS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
